--- a/index.html
+++ b/index.html
@@ -19,18 +19,21 @@
       <div class="container-abra-descubra">
         <h2>Qual é a sua sorte de hoje?</h2>
         <span>Abra o biscoito e descubra!</span>
-        <button class="btn-biscoito-sorte ">
-          <img id="btnBiscoitoSorte" class="img-biscoito-sorte" src="./assets/biscoito-sorte.svg" alt="ilustração de um biscoito da sorte fechado">
+        <button class="btn-biscoito-sorte">
+          <img
+            id="btnBiscoitoSorte"
+            class="img-biscoito-sorte"
+            src="./assets/biscoito-sorte.svg"
+            alt="ilustração de um biscoito da sorte fechado"
+          />
         </button>
       </div>
 
       <!-- Biscoito aberto -->
       <div class="container-mensagem hide">
         <h2>Aqui está a sua sorte de hoje:</h2>
-        <div class="mensagem-sorte">
-          <p>
-            Se alguém está tão cansado que não possa te dar um sorriso,
-            deixa-lhe o teu.
+        <div class="container-mensagem-sorte">
+          <p id="mensagem-sorte">
           </p>
         </div>
         <img
@@ -38,11 +41,11 @@
           src="./assets/biscoito-sorte-aberto.svg"
           alt="ilustração de um biscoito da sorte aberto"
         />
-        <button id="btnBiscoitoSorte" class="btn-abrir-biscoito">Abrir outro biscoito</button>
+        <button id="btnAnotherMessage" class="btn-abrir-biscoito">
+          Abrir outro biscoito
+        </button>
       </div>
     </main>
-
     <script src="main.js"></script>
-
   </body>
 </html>
